--- a/aboutUs.html
+++ b/aboutUs.html
@@ -118,29 +118,24 @@
     
     <h4 class="aboutus-heading-text">Schools</h4>
     <div class="card-container">
-        <div class="school-card">
-            <img src="assets/images/city-campus.jpg" alt="City Campus">
-            <h5>APIIT City Campus</h5>
-            <p>Location: Union Place, Colombo</p>
-            <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.765612991586!2d79.85865397373263!3d6.918600618448528!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2596d3cb8fe07%3A0x2b0ae2edd563a661!2sAsia%20Pacific%20Institute%20of%20Information%20Technology%20(APIIT)!5e0!3m2!1sen!2slk!4v1710394070052!5m2!1sen!2slk"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </div>
+      <div class="school-card">
+        <img src="assets/images/city-campus.jpg" alt="City Campus">
+        <h5>APIIT City Campus</h5>
+        <p>Location: Union Place, Colombo</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.765612991586!2d79.85865397373263!3d6.918600618448528!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2596d3cb8fe07%3A0x2b0ae2edd563a661!2sAsia%20Pacific%20Institute%20of%20Information%20Technology%20(APIIT)!5e0!3m2!1sen!2slk!4v1710394070052!5m2!1sen!2slk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    
         <div class="school-card">
             <img src="assets/images/law-school.jpg" alt="Law School">
             <h5>APIIT Law School</h5>
             <p>Location: Access Towers, Colombo</p>
-            <div class="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.752166791424!2d79.85488907373268!3d6.920203418428854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae25914a897a0d5%3A0x8de5fb5759da10c0!2sAPIIT%20Law%20School!5e0!3m2!1sen!2slk!4v1710394258515!5m2!1sen!2slk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
         </div>
         <div class="school-card">
             <img src="assets/images/apiit-kandy.jpg" alt="APIIT Kandy">
             <h5>APIIT Kandy Campus</h5>
             <p>Location: Peradeniya Road, Kandy</p>
-            <div class="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.6460510553056!2d80.6174665737356!3d7.2810528138993424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae3673f5e22ab3b%3A0xcbaef11262bec73!2sAPIIT%20Kandy%20Campus!5e0!3m2!1sen!2slk!4v1710394022377!5m2!1sen!2slk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
         </div>
     </div>
 
@@ -151,7 +146,7 @@
           <div class="footer-col">
             <h4>QUICK LINKS</h4>
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="index.php">Home</a></li>
               <li><a href="">Services</a></li>
               <li><a href="">Mentoring Sessions</a></li>
               <li><a href="aboutUs.html">About Us</a></li>
