--- a/aboutUs.html
+++ b/aboutUs.html
@@ -33,10 +33,8 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.php">Home
-                  <span class="sr-only">(current)</span>
-                </a>
-              </li> 
+                <a class="nav-link" href="index.php">Home</a>
+              </li>
               <li class="nav-item active">
                 <a class="nav-link" href="aboutUs.html">About Us</a>
               </li>
@@ -58,7 +56,25 @@
       </nav>
     </header>
 
-    <div class="aboutus-banner">
+      <!-- Banner Starts Here -->
+  <div class="heading-page header-text">
+    <section class="about-page-heading">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="text-content">
+              <h4>Mingle</h4>
+              <h2>About Us</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <!-- Banner Ends Here -->
+
+    <!--div class="aboutus-banner">
         <img src="assets/images/about-banner.jpg" height="660">
     </div>
 
@@ -78,9 +94,9 @@
                  height: 250px;
             }
         }
-    </style>
+    </style-->
     
-    <h4 class="aboutus-heading-text">About Us</h4>
+    <h4 class="aboutus-heading-text">Who Are We?</h4>
     <p class="about-content">Reputable higher education institution APIIT Sri Lanka was founded in 1999 in collaboration with Asia Pacific University of Technology and Innovation in Malaysia and Staffordshire University in the UK.We offer undergraduate and graduate degree programs in business management, computing/IT, and law from Staffordshire University in the UK.</p>
      
     <!-- Row of icons and text -->
