--- a/login.html
+++ b/login.html
@@ -1,64 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login Page</title>
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="assets/css/templatemo-stand-blog.css">
-  </head>
-  <body>
-    <div class="container">
-        <div class="login-pg-logos">
-            <img src="assets/images/apiit-logo.png" alt="" width="auto" height="75px">
-            <img src="assets/images/BrandLogo.png" alt="" width="250px" height="100px">
-        </div>
-      <div class="row justify-content-center mt-5">
-        <div class="col-md-6">
-          <div class="card">
-            <h5 class="card-header">Login</h5>
-            <div class="card-body">
-              <form action="login.php" method="post" id="loginForm">
-                <div class="form-group">
-                  <label for="email">Email address</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="email"
-                    name="email"
-                    required
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="password">Password</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="password"
-                    name="password"
-                    required
-                  />
-                </div>
-                <button type="submit" class="btn btn-primary">Login</button>
-                <button type="button" onclick="history.back()" class="btn back-primary">Back</button>
-              </form>
-            </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login Page</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/templatemo-stand-blog.css">
+</head>
+
+<style>
+  .error-message {
+    color: #ff0000;
+    margin-top: 5px;
+  }
+</style>
+
+<body>
+  <div class="container">
+    <div class="login-pg-logos">
+      <img src="assets/images/apiit-logo.png" alt="" width="auto" height="75px">
+      <img src="assets/images/BrandLogo.png" alt="" width="250px" height="100px">
+    </div>
+    <div class="row justify-content-center mt-5">
+      <div class="col-md-6">
+        <div class="card">
+          <h5 class="card-header">Login</h5>
+          <div class="card-body">
+            <form action="login.php" method="post" id="loginForm">
+              <div class="form-group">
+                <label for="email">Email address</label>
+                <input type="email" class="form-control" id="email" name="email" required />
+              </div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" name="password" required />
+              </div>
+              <div id="error-message" class="error-message"></div><br>
+              <button type="submit" class="btn btn-primary">Login</button>
+              <button type="button" onclick="history.back()" class="btn back-primary">Back</button>
+            </form>
           </div>
+        </div>
+        <div class="mt-3" style="padding-left: 3px;">
+          <p>Don't have an account? <a href="register.html" style="color: #1ea5c3;">Register</a></p>
         </div>
       </div>
     </div>
+  </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        const searchParams = new URLSearchParams(window.location.search);
-        if (searchParams.has("error")) {
-          alert("Incorrect email or password. Please try again.");
-        }
-      });
-    </script>
-  </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      const searchParams = new URLSearchParams(window.location.search);
+      if (searchParams.has("error")) {
+        const errorMessage = "Incorrect email or password. Please try again.";
+        $('#error-message').text(errorMessage).addClass('error-message');
+      }
+    });
+
+  </script>
+</body>
+
 </html>
