--- a/aboutUs.html
+++ b/aboutUs.html
@@ -38,15 +38,15 @@
               <li class="nav-item active">
                 <a class="nav-link" href="aboutUs.html">About Us</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blog.html">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="post-details.html">Career Guidance</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Mentoring Sessions</a>
-              </li>
+          <!--li class="nav-item">
+              <a class="nav-link" href="blog.html">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="post-details.html">Career Guidance</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Mentoring Sessions</a>
+            </li-->
               <button class="login-button">
                 <a class="nav-link" href="login.html">Login</a>
               </button>
@@ -63,7 +63,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="text-content">
-              <h4>Mingle</h4>
+              <h4>APIIT Blog</h4>
               <h2>About Us</h2>
             </div>
           </div>
