--- a/register.html
+++ b/register.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="assets/css/templatemo-stand-blog.css">
 </head>
 
+<style>
+    .error-message {
+        color: #ff0000;
+        margin-top: 5px;
+        font-size: 15px;
+    }
+</style>
+
 <body>
     <div class="container">
         <div class="login-pg-logos">
@@ -27,19 +35,24 @@
                                     <option value="">Select</option>
                                     <option value="student">Student</option>
                                     <option value="lecturer">Lecturer</option>
+                                    <!--option value="alumni">Alumni</option>
+                                    <option value="admin">Admin</option-->
                                 </select>
                             </div>
                             <div class="form-group">
                                 <label for="full-name">Full Name</label>
-                                <input type="text" class="form-control" id="full-name" name="full-name" pattern="[A-Za-z ]+" title="Please enter letters only" required />
+                                <input type="text" class="form-control" id="full-name" name="full-name"
+                                    pattern="[A-Za-z ]+" title="Please enter letters only" required />
                             </div>
                             <div class="form-group">
                                 <label for="username">Username</label>
                                 <input type="text" class="form-control" id="username" name="username" required />
+                                <span id="username-error-message" class="error-message"></span>
                             </div>
                             <div class="form-group">
-                                <label for="email">Email address</label>
+                                <label for="email">APIIT Email address</label>
                                 <input type="email" class="form-control" id="email" name="email" required />
+                                <span id="email-error-message" class="error-message"></span>
                             </div>
                             <div class="form-group">
                                 <label for="password">Password</label>
@@ -47,10 +60,11 @@
                             </div>
                             <div class="form-group">
                                 <label for="confirm-password">Confirm Password</label>
-                                <input type="password" class="form-control" id="confirm-password" name="confirm-password" required />
-                                <p id="password-error" style="color: red; display: none;">Passwords do not match.</p>
+                                <input type="password" class="form-control" id="confirm-password"
+                                    name="confirm-password" required />
+                                <span id="password-mismatch-error-message" class="error-message"></span>
                             </div>
-                            <button type="submit" class="btn btn-primary" onclick="return validatePassword()">Register</button>
+                            <button type="submit" class="btn btn-primary">Register</button>
                             <button type="button" onclick="history.back()" class="btn back-primary">Back</button>
                         </form>
                     </div>
@@ -61,15 +75,32 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script>
-        function validatePassword() {
-            var password = document.getElementById("password").value;
-            var confirmPassword = document.getElementById("confirm-password").value;
-            if (password != confirmPassword) {
-                document.getElementById("password-error").style.display = "block";
-                return false;
+        $(document).ready(function () {
+            const searchParams = new URLSearchParams(window.location.search);
+            if (searchParams.has("error")) {
+                const errorMessage = searchParams.get("error");
+                switch (errorMessage) {
+                    case "email_format":
+                        $('#email-error-message').text("Invalid email format").addClass('error-message');
+                        break;
+                    case "email_domain":
+                        $('#email-error-message').text("Invalid email").addClass('error-message');
+                        break;
+                    case "password_mismatch":
+                        $('#password-mismatch-error-message').text("Passwords do not match").addClass('error-message');
+                        break;
+                    case "username_exists":
+                        $('#username-error-message').text("Username already exists").addClass('error-message');
+                        break;
+                    case "email_exists":
+                        $('#email-error-message').text("Email already exists").addClass('error-message');
+                        break;
+                    default:
+                        $('#email-error-message').text("An error occurred. Please try again later.").addClass('error-message');
+                        break;
+                }
             }
-            return true;
-        }
+        });
     </script>
 </body>
 
