--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="mt-3" style="padding-left: 3px;">
-          <p>Don't have an account? <a href="register.html" style="color: #1ea5c3;">Register</a></p>
+          <p>Don't have an account? <a href="register_view.php" style="color: #1ea5c3;">Register</a></p>
         </div>
       </div>
     </div>
